related work updated

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,3 +1,3 @@
 \section{Conclusion}
 
-In this study, we explore how a machine learning model can \textit{learn how to learn} (hence meta-learning) and generalise using only a few examples for virtual screening. This research project builds on the work from \citet{altae2017low}, who have set important foundations for this problem domain. First and foremost, we reproduce their work effectively and provide deeper insight into the study by introducing PRC reporting, over and above the ROC scores. Secondly, we also introduce two new few-shot machine learning models to this problem domain and explore their performance against the state-of-the-art \cite{altae2017low}, which we reproduce. Our reproduction provides results consistent with the original work. The introduced Prototypical Networks perform better on the Tox21 dataset based on ROC performance, while outperforming all other machine learning models in PRC performance. We believe that this is a valuable contribution as, in addition to obtaining better results than the state of the art, given the nature of the data used, the PRC provides more reliable insight into the performance of the models. We also find that making use of learned embeddings through GCNs, as opposed to ECFPs, consistently results in better ROC and PRC performance. For datasets in which the ligands provided are structurally distinct, holding no relationship whatsoever between them, the conventional machine learning techniques, used as a baseline in our experiments, perform better.
+In this study, we explore how a machine learning model can \textit{learn how to learn} (hence meta-learning) and generalise using only a few examples for virtual screening. This research project builds on the work from \citet{altae2017low}, who have set important foundations for this problem domain. First and foremost, we reproduce their work effectively and provide deeper insight into the study by introducing PRC reporting, over and above the ROC scores. Second, we also introduce two new few-shot machine learning models to this problem domain and explore their performance against the state-of-the-art \cite{altae2017low}, which we reproduce. Our reproduction provides results consistent with the original work. The introduced Prototypical Networks perform better on the Tox21 dataset based on ROC performance, while outperforming all other machine learning models in PRC performance. We believe that this is a valuable contribution as, in addition to obtaining better results than the state of the art, given the nature of the data used, the PRC provides more reliable insight into the performance of the models. We also find that making use of learned embeddings through GCNs, as opposed to ECFPs, consistently results in better ROC and PRC performance. For datasets in which the ligands provided are structurally distinct, holding no relationship whatsoever between them, the conventional machine learning techniques, used as a baseline in our experiments, perform better.
