--- a/paper/main.tex
+++ b/paper/main.tex
@@ -10,6 +10,8 @@
 %% Place any additional packages needed here.  Only include packages
 %% which are essential, to avoid problems later.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{amsfonts}
+
 \usepackage{chemformula} % Formula subscripts using \ch{}
 \usepackage[T1]{fontenc} % Use modern font encodings
 
@@ -48,12 +50,11 @@
 %% when authors are associated with multiple institutions.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \author{Daniel Vella}
-\affiliation{Department of Artificial Intelligence}
+\affiliation{Department of Artificial Intelligence, University of Malta, Msida, Malta}
 \email{jean.p.ebejer@um.edu.mt} %% JP: the PI address is used, because you address will cease to exist after graduation ...
 \author{Jean-Paul Ebejer}
-\affiliation{Centre for Molecular Medicine and Biobanking}
+\affiliation{Centre for Molecular Medicine and Biobanking, University of Malta, Msida, Malta}
 % \altaffiliation{A shared footnote}
-\altaffiliation{University of Malta, Msida, Malta}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The document title should be given as usual. Some journals require
@@ -62,7 +63,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \title[An \textsf{achemso} demo]
 \title
-  {Few-Shot Learning for Low Data Drug Discovery}
+  {Few-Shot Learning for Low-Data Drug Discovery}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Some journals require a list of abbreviations or keywords to be
