--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -109,3 +109,9 @@ Proposed by \citet{snell2017prototypical}, these networks are similar to Matchin
 	\caption[Schematic of one-shot learning in drug discovery]{Schematic of one-shot learning in drug discovery based on the Matching Network \citep{vinyals2016matching} architecture. Reproduced from \citet{altae2017low}.}
 	\label{fig:schematiconeshotdrug}
 \end{figure}
+
+Their work is tested on the Tox21, the Side Effect Resource (SIDER) \citep{kuhn2016sider}, and MUV datasets. For every dataset, a subset of the targets is reserved for training and the rest for testing. Training is carried out as explained in the Matching Networks paper, in which training conditions match those at test time \citep{vinyals2016matching}. The authors make use of a random forest with 100 decision trees as a machine learning baseline model. They also utilise a conventional GCN as an additional baseline model, which is trained using only a small support set from the test targets. They then experiment with Siamese Networks \citep{koch2015siamese}, Matching Networks \citep{vinyals2016matching}, and an adaptation of the Matching Networks by applying the iterative refinement concepts explained above.
+
+The authors report ROC-AUC scores to report the performance of the models. Considering the extreme imbalance of the data in the utilised datasets, we note that the PR-AUC score would be more appropriate. PR-AUC is based on the relationship between precision and recall, providing a clearer picture into how the model performs when predicting the \textit{positive} (active) class in the data. Predicting the active class correctly is of significant importance in virtual screening.
+
+On the Tox21 and SIDER datasets, the proposed machine learning architecture achieves good ROC-AUC performance. The mean score for 10-shot learning on the median held-out task on Tox21 achieves a score of $0.823 \pm 0.002$, while for one-shot learning  the model achieves a mean score of $0.827 \pm 0.001$. The reasons why one-shot learning achieved better performance than 10-shot learning is uncertain, as we expect the model to perform better with larger support sets. However, this might be attributed to variance in the data between experiments. On MUV data, the baseline machine learning models out-performed few-shot learning. The authors report that this is due to MUV data being maximally informative, and therefore structural similarity cannot be utilised to generalise for activity prediction. The authors open-sourced the models developed in the DeepChem library. However, the implementations are now outdated and not executable with the DeepChem library, which makes reproduction of results difficult. However, we study the open-sourced implementation along with the implementation details in the original literature to successfully reproduce this work.
