first review session JP/DV

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -50,11 +50,11 @@
 %% when authors are associated with multiple institutions.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \author{Daniel Vella}
-\affiliation{Department of Artificial Intelligence, University of Malta, Msida, Malta}
-\email{jean.p.ebejer@um.edu.mt} %% JP: the PI address is used, because you address will cease to exist after graduation ...
+\affiliation{Department of Artificial Intelligence, University of Malta, Msida, MSD 2080, Malta.}
 \author{Jean-Paul Ebejer}
-\affiliation{Centre for Molecular Medicine and Biobanking, University of Malta, Msida, Malta}
-% \altaffiliation{A shared footnote}
+\email{jean.p.ebejer@um.edu.mt} %% JP: the PI address is used, because you address will
+\affiliation{Department of Artificial Intelligence, University of Malta, Msida, MSD 2080, Malta.}
+\altaffiliation{Centre for Molecular Medicine and Biobanking, University of Malta, Msida, MSD 2080, Malta.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The document title should be given as usual. Some journals require
@@ -71,7 +71,7 @@
 %% the title and author information, if needed.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \abbreviations{LBVS, Tox21, MUV, DUD-E}
-\keywords{few-shot learning, machine learning, low-data, prototypical networks}  %% JP: please check
+\keywords{machine learning, few-shot learning, low-data, prototypical networks, relation networks, matching networks}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The manuscript does not need to include \maketitle, which is
